--- a/bluecollar/src/main/res/layout/fragment_blue_info_center.xml
+++ b/bluecollar/src/main/res/layout/fragment_blue_info_center.xml
@@ -18,14 +18,14 @@
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="202dip"
-                android:background="@drawable/icon_centerbg">
+                android:background="@drawable/bg">
 
                 <com.facebook.drawee.view.SimpleDraweeView
                     android:id="@+id/myImageview"
                     android:layout_width="70dip"
                     android:layout_height="70dip"
                     android:layout_centerHorizontal="true"
-                    android:layout_marginTop="@dimen/padding_small"
+                    android:layout_marginTop="50dip"
                     android:clickable="true"
                     android:visibility="invisible"
                     fresco:actualImageScaleType="focusCrop"
